--- a/env.yml
+++ b/env.yml
@@ -1,8 +1,13 @@
-name: my_ml_env
+name: fast_dev_ml_env
 channels:
   - conda-forge
 dependencies:
-  - python =3.11
+  - python=3.8  # Более стабильная версия для разработки
   - pandas
   - scikit-learn
   - opencv
+  - numpy  # Добавлено для поддержки численных операций
+  - matplotlib  # Добавлено для визуализации данных
+  - jupyterlab  # Добавлено для интерактивной разработки
+  - tensorflow  # Добавлено для разработки и тренировки моделей машинного обучения
+  - pytorch  # Добавлено как альтернатива TensorFlow
